--- a/src/dashboard/Dashboard.css
+++ b/src/dashboard/Dashboard.css
@@ -20,6 +20,9 @@ main {
   height: 100vh;
   width: 15rem;
 }
+.sidebarContent {
+  width: 100%;
+}
 .top_section {
   display: flex;
   align-items: center;
@@ -50,6 +53,22 @@ main {
 }
 .link_text {
   font-size: 20px;
+}
+
+.loginButtonDiv {
+  width: 100%;
+  height: 3rem;
+}
+
+.loginButton {
+  float: right;
+  background: none;
+  border: none;
+}
+
+.loginButton:hover {
+  cursor: pointer;
+  color: blue;
 }
 
 @media (min-width: 1400px) {
