--- a/src/dashboard/Dashboard.css
+++ b/src/dashboard/Dashboard.css
@@ -1,27 +1,36 @@
-* {
-  margin: 0;
-  padding: 0;
-  text-decoration: none;
+h1 {
+  margin-bottom: 1rem;
+  font-size: 2rem !important;
 }
-.container {
+
+.sidebarContainerDiv {
   display: flex;
-  padding-right: none;
-  padding-left: none;
-  margin-left: none;
-  margin-right: none;
 }
+
+.settingsIcon {
+  margin-left: 0.5rem;
+}
+
+.css-wmy1p7-ReactDropdownSelect {
+  background-color: white !important;
+}
+
 main {
   width: 100%;
   padding: 20px;
+  background-color: #fafafa;
+  height: 100vh;
 }
 .sidebar {
-  background: lightgrey;
-  color: black;
+  background: #222;
+  color: #eee;
   height: 100vh;
   width: 15rem;
+  position: fixed;
 }
 .sidebarContent {
   width: 100%;
+  margin-left: 15rem;
 }
 .top_section {
   display: flex;
@@ -38,24 +47,26 @@ main {
 }
 .link {
   display: flex;
-  color: black;
+  color: #eee;
   padding: 10px 15px;
   gap: 15px;
+  text-decoration: none;
 }
 .link:hover {
-  background: lightskyblue;
-  color: #000;
+  background: #434343;
+  color: #eee;
   transition: all 0.5s;
 }
 .active {
-  background: lightskyblue;
-  color: #000;
+  background: #434343;
+  color: #eee;
 }
 .link_text {
   font-size: 20px;
 }
 
 .loginButtonDiv {
+  position: relative;
   width: 100%;
 }
 
@@ -63,11 +74,12 @@ main {
   float: right;
   background: none;
   border: none;
+  margin-right: 1rem;
 }
 
 .loginButton:hover {
   cursor: pointer;
-  color: blue;
+  color: #0d6efd;
 }
 
 .logoutButtonDiv {
@@ -77,17 +89,16 @@ main {
 .logoutButtonDiv button {
   background: none;
   border: none;
-  margin-right: 0.5rem;
+  margin-right: 1rem;
 }
 
 .logoutButtonDiv button:hover {
   cursor: pointer;
-  color: blue;
+  color: #0d6efd;
 }
 
 .forgotPasswordButton {
-  color: blue;
-  text-decoration: underline;
+  color: #0d6efd;
   margin-top: 1rem;
   border: none;
   background: none;
@@ -97,9 +108,18 @@ main {
   cursor: pointer;
 }
 
+.usernameDiv {
+  display: flex;
+  justify-content: flex-end;
+  min-width: 160px;
+}
+
 .settingsDiv {
-  background-color: rgb(235, 229, 229);
-  border-radius: 2rem;
+  position: absolute;
+  top: 2rem;
+  margin-right: 1rem;
+  background-color: #eee;
+  border-radius: 0.5rem;
 }
 
 .settingsDiv button {
@@ -107,14 +127,19 @@ main {
   border: none;
   background: none;
   margin: 0.5rem;
+  white-space: nowrap;
 }
 
 .settingsDiv button:hover {
   cursor: pointer;
-  color: blue;
+  color: #0d6efd;
 }
 
 .errorMessage {
+  color: rgb(230, 72, 72);
+}
+
+.response-error {
   color: rgb(230, 72, 72);
 }
 
@@ -125,32 +150,36 @@ main {
   padding: 1rem;
 }
 
-@media (min-width: 1400px) {
-  .container {
-    max-width: none;
-  }
+.invalid-email {
+  border-color: red !important;
 }
 
-@media (min-width: 1200) {
-  .container {
-    max-width: none;
-  }
+.form-control:focus {
+  color: #212529;
+  background-color: #fff;
+  border-color: #86b7fe;
+  outline: 0;
+  box-shadow: none;
 }
 
-@media (min-width: 992) {
-  .container {
-    max-width: none;
-  }
+.passwordDiv {
+  position: relative;
 }
 
-@media (min-width: 768) {
-  .container {
-    max-width: none;
-  }
+.passwordDiv button {
+  position: absolute;
+  top: 24px;
+  right: 0;
 }
 
-@media (min-width: 576) {
-  .container {
-    max-width: none;
-  }
+.btn-success {
+  margin-bottom: 1rem;
+}
+
+.title {
+  font-weight: bold;
+}
+
+.submitButton {
+  margin-right: 0.5rem;
 }
