--- a/src/table/Table.css
+++ b/src/table/Table.css
@@ -16,11 +16,17 @@ th {
 
 table th,
 table td {
-  padding: 0.5rem;
+  padding: 0.5rem 1.5rem;
   border-bottom: 1px solid black;
   border-right: 1px solid black;
 }
 
 td:last-child {
   border-right: 0;
+}
+
+.editButton {
+  color: orange;
+  border: none;
+  background: none;
 }
