--- a/src/table/Table.css
+++ b/src/table/Table.css
@@ -30,3 +30,18 @@ td:last-child {
   border: none;
   background: none;
 }
+
+.badEvaluation {
+  color: rgb(206, 66, 66);
+  width: 100%;
+}
+
+.goodEvaluation {
+  color: orange;
+  width: 100%;
+}
+
+.greatEvaluation {
+  color: rgb(64, 172, 64);
+  width: 100%;
+}
