--- a/src/dashboard/Dashboard.css
+++ b/src/dashboard/Dashboard.css
@@ -194,7 +194,7 @@ main {
 
 .paginationDiv {
   display: flex;
-  justify-content: flex-start;
+  justify-content: space-between;
 }
 
 .pagination {
