--- a/src/table/Pagination.css
+++ b/src/table/Pagination.css
@@ -1,10 +1,10 @@
 .paginationDiv {
-  justify-content: flex-start;
+  justify-content: space-between;
   margin-top: 10px;
 }
 .pagination {
   height: 100%;
-  justify-content: flex-start;
+  justify-content: space-between;
 }
 
 ul {
