--- a/src/child/Child.css
+++ b/src/child/Child.css
@@ -61,3 +61,9 @@ input::placeholder {
 .buttons {
   display: flex;
 }
+
+.moreInfoDiv {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 0.5rem;
+}
