--- a/src/volunteer/Volunteer.css
+++ b/src/volunteer/Volunteer.css
@@ -52,3 +52,8 @@ input::placeholder {
 .ageSpan {
   margin-left: 1rem;
 }
+
+.facultyDepartmentDiv {
+  display: flex;
+  flex-direction: column;
+}
