login page done

--- a/src/activate_account/ActivateAccount.css
+++ b/src/activate_account/ActivateAccount.css
@@ -7,7 +7,7 @@
   margin-block: 1rem;
 }
 
-.submitButton {
+.activateAccountButton {
   width: 10rem;
   background: #0655c9 !important;
   margin-top: 1rem;
