--- a/src/form/Form.css
+++ b/src/form/Form.css
@@ -65,3 +65,23 @@ textarea {
   margin-bottom: 0.25rem;
   margin-top: 0.5rem;
 }
+
+.excel-button {
+  width: 2.5rem;
+  height: 2.5rem;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #28a745; /* Green color */
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  text-decoration: none;
+}
+
+.excel-button i {
+  font-size: 1.5rem;
+  color: white;
+  font-weight: unset;
+}
